# arara

./: .coverage  .coveragerc  .editorconfig  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  README.md  SECURITY.md  VERSIONING.md  chainlit.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.container/: Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md
.github/workflows/: codecov.yml  test.yml
data/: recommender-systems-knn-svd-nn-keras.ipynb
docs/: architecture.md  basic_usage.md  index.md  installation.md  mkdocs.yml  monitoring.md
docs/examples/: TBD.md
examples/: 01_sequential_cycle.ipynb  basic_recommendation.py  code_executor.ipynb  conversational_orchestrator.ipynb  google_docs_reader.ipynb  hiaac.ipynb  hiaac.py  human_in_the_loop.ipynb  memory.ipynb  modules.ipynb  monitoring_usage.py  reflection.ipynb  sequential_cycle.ipynb  simple_agent.py  tool_calling.py  tool_usage.ipynb  tool_usage_II.ipynb  toy.ipynb  web_crawler.ipynb  web_search.ipynb
neuron/: .coverage  .python-version  __init__.py  code_utils.py  exception_utils.py  graph_utils.py  messages.py  pyproject.toml  runtime_logging.py  security_utils.py
neuron/agents/: __init__.py  agent.py  assistant_agent.py  base_agent.py  conversable_agent.py  llm_agent.py  user_agent.py
neuron/agents/agents/: __init__.py  knowledge_representer_agent.py  learner_agent.py  retriever_agent.py
neuron/agents/capabilities/: __init__.py  agent_capability.py  df_reader_agent.py  fine_tuned_learner_agent.py  learner_agent.py
neuron/agents/essentials/: __init__.py  critic_agent.py  explainable_agent.py  perceiver_agent.py
neuron/agents/helpers/: __init__.py  append_oai_message.py  append_short_memories_before_reply.py  chat_messages.py  clear_history.py  match_trigger.py  message_processing.py  message_to_dict.py  prepare_chat.py  print_received_message.py  validate_llm_config.py
neuron/agents/llm_agents/: __init__.py  assessor_agent.py  critic_agent.py  evaluator_agent.py  explainable_agent.py  learner_agent.py  perceiver_agent.py  recommender_agent.py
neuron/agents/non_llm_agents/: __init__.py  feature_imputer_agent.py  knowledge_representer_agent.py  retriever_agent.py
neuron/agents/utils/: __init__.py  append_oai_message.py  chat_messages.py  clear_history.py  match_trigger.py  message_processing.py  prepare_chat.py  print_received_message.py  validate_llm_config.py
neuron/base/: __init__.py  chat_agent.py  handoff.py  task.py
neuron/capabilities/: __init__.py  agent_capability.py  capability.py  data_frame_retriever_capability.py  episodic_memory_capability.py  memory_capability.py  neuron_capability.py  reflection_capability.py  rerank_capability.py  semantic_template_filler_capability.py  shared_memory_io_capability.py  text_extraction_capability.py  transform_messages.py
neuron/capabilities/abilities/: __init__.py  ability.py  memory_ability.py  text_extraction_ability.py
neuron/capabilities/clients/: __init__.py  base.py  client_wrapper.py  groq.py  openai.py
neuron/capabilities/code_executor/: base.py
neuron/capabilities/memory/: __init__.py  base_memory.py  list_memory.py
neuron/clients/: __init__.py  base_client.py  client_wrapper.py  cloud_based_client.py  custom_client.py
neuron/code_executor/: __init__.py  base.py
neuron/cognitions/: __init__.py  agent_cognition.py  base_memory.py  episodic_memory.py  immediate_working_memory.py  shared_memory.py
neuron/components/: __init__.py  base_component.py  cycle.py  pipeline.py  sequence.py
neuron/io/: __init__.py  base.py
neuron/logger/: __init__.py  base_logger.py  enhanced_logger.py  file_logger.py  logger_factory.py  logger_utils.py
neuron/memory/: base.py  base_memory.py  list_memory.py  mem0_memory.py
neuron/model_context/: chat_completion_context.py  unbounded_chat_completion_context.py
neuron/models/: __init__.py  model_client.py  types.py
neuron/monitoring/: __init__.py  experimental_feature.py  metrics.py
neuron/neurons/: __init__.py  base.py  base_neuron.py  chat.py  chitchat.py  conversational_orchestrator.py  neuron.py  router_neuron.py  types.py  user.py  user_test.py  utils.py
neuron/notebooks/: round_robin.ipynb  sequential_cycle.ipynb
neuron/oai/: __init__.py  client.py  groq.py
neuron/scenarios/: __init__.py  round_robin.py
neuron/scripts/: round_robin.py
neuron/tests/: test_agent.py  test_assistant_agent.py  test_code_utils.py  test_exception_utils.py  test_formatting_utils.py  test_roudin_robin.py  test_runtime_logging.py
neuron/tools/: __init__.py  base.py  execute_tool_call.py  function_tool.py
neuron/ui/: __init__.py  console.py
scripts/: bump_version.py  check_security.sh  check_types.sh  format_code.sh  generate_changelog.py  run_tests.sh  security_check.sh  setup_dev_env.sh
src/: __init__.py  agent_messages.py  function_utils.py  image.py  llm_messages.py  messages.py  normalize_stop_reason.py  runtime_logging.py  security_utils.py
src/agents/: __init__.py  agent.py  base.py  module.py  orchestrator.py  silent.py  types.py  user.py
src/cache/: cache.py  cache_factory.py  cosmos_db_cache.py  redis_cache.py
src/coding/: __init__.py  base.py  code_utils.py  factory.py  func_with_reqs.py  local_commandline_code_executor.py  markdown_code_extractor.py
src/io/: base.py
src/ioflow/: console.py
src/logger/: __init__.py  base_logger.py  enhanced_logger.py  file_logger.py  logger_factory.py  logger_utils.py
src/models/: types.py
src/monitoring/: __init__.py  experimental_feature.py  metrics.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_recommendation_flow.py
tests/unit/: __init__.py  mock_agent.py  mock_client.py  mock_neuron.py  test_agent.py  test_base_client.py  test_code_utils.py  test_episodic_memory_capability.py  test_exception_utils.py  test_formatting_utils.py  test_neuron.py  test_runtime_logging.py  test_security_utils.py
(+110 files in other folders)
